[tool.poetry]
name = "trade"
version = "0.1.0"
description = ""
authors = ["mrgo1d <alejandroustin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ccxt = "^4.4.99"
binance-sdk-spot = "^1.2.0"
python-dotenv = "^1.1.1"
asyncio = "^4.0.0"
logging = "^0.4.9.6"
binance-sdk-wallet = "^1.2.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
